# hy-lisp-python-book

./: GEMINI.md  MY_NOTES.md  README.md
.github/: FUNDING.yml
manuscript/: Book.txt  Subset.txt  agents_agno_ollama.md  bingsearch.md  blockchain.md  bravesearch.md  datastores.md  datastores_with_neo4j.md  deeplearning.md  google-gemini.md  graphviz.md  hytutorial.md  jupyter.md  kg.md  kgcreator.md  kgn-NOTUSED.md  kgn.md  knowledge-navigator.md  langchain.md  linkeddata.md  llamaindex.md  llm_colab.md  nlp.md  ollama.md  openai.md  perplexity.md  preface.md  quantum.md  rdf-sparql.md  symbolic-math.md  webapps.md  webscrape.md  whylisp.md  wrapup.md  zvec_RAG.md
manuscript/images/: kg_overview.graffle  rdf1.graffle
manuscript/resources/: kg1.graffle  kg_overview.graffle  nn_backprop2d.graffle  rdf2.graffle
source_code_for_examples/: .gitignore  AGENT_SKILLS_ONE_TIME_SETUP.md  AGENT_SKILLS_README.md  Makefile  README.md
source_code_for_examples/RAG_zvec/: .gitignore  README.md  app.hy  pyproject.toml
source_code_for_examples/agents_agno/: README.md  pyproject.toml  web_site_qa.hy
source_code_for_examples/brave_search/: README.md  pyproject.toml
source_code_for_examples/datastores/: README.md  postgres_example.hy  postgres_lib.hy  pyproject.toml  sqlite_example.hy  sqlite_lib.hy
source_code_for_examples/deeplearning/: README.md  lstm.hy  pyproject.toml  wisconsin.hy
source_code_for_examples/google-gemini/: README.md  chat.hy  ws.py  (+6 more)
source_code_for_examples/langchain_examples/: README.md  country_information.hy  directions_template.hy  pyproject.toml
(+68 files in other folders)
